# candle-birefnet

./: .gitignore  Cargo.toml  README.md
docs/: INT8_QUANTIZATION.md
examples/: inference.rs
scripts/: compare_inference.py  compare_int8_quality.py  generate_golden_data.py  generate_golden_data_int8.py  generate_golden_data_lite.py  generate_int8_results.py  generate_pytorch_results_lite.py  quantize_int8_calibrated.py  quantize_int8_ptq.py
src/: aspp.rs  birefnet.rs  decoder.rs  deform_conv2d.rs  lib.rs
tests/: debug_1024.rs  golden.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
