[package]
name = "candle-birefnet"
version = "0.1.0"
edition = "2024"
description = "BiRefNet (Bilateral Reference Network) inference for Hugging Face Candle"
license = "Apache-2.0"
repository = "https://github.com/developer0hye/candle-birefnet"
keywords = ["deep-learning", "image-segmentation", "background-removal", "candle", "birefnet"]
categories = ["science"]

[dependencies]
# Using forked candle with conv2d_tiled bug fix (https://github.com/huggingface/candle/issues/3404)
# TODO: Switch back to crates.io candle once the fix is merged upstream
candle-core = { git = "https://github.com/developer0hye/candle.git", branch = "fix/conv2d-tiled-bug" }
candle-nn = { git = "https://github.com/developer0hye/candle.git", branch = "fix/conv2d-tiled-bug" }
candle-dcnv2 = { git = "https://github.com/developer0hye/candle-dcnv2.git" }
candle-swin = { git = "https://github.com/developer0hye/candle-swin.git" }

[patch.crates-io]
candle-core = { git = "https://github.com/developer0hye/candle.git", branch = "fix/conv2d-tiled-bug" }
candle-nn = { git = "https://github.com/developer0hye/candle.git", branch = "fix/conv2d-tiled-bug" }

[dev-dependencies]
anyhow = "1"
safetensors = "0.5"
image = "0.25"
hf-hub = "0.4"
